--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -28,7 +28,7 @@
 
 <!-- FUNCTIONAL SCRIPTS -->
  <script src="face-api.min.js"></script> 
- <script src="spotify_auth.js"></script>
+ <script src="react_spotify_auth.js"></script>
 <!-- <script src="react_webcam.js"></script> -->
 
 
