--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -57,7 +57,9 @@ if (urlParams.get('error')) {
         let code = urlParams.get('code');
 
  getToken(code);
+
  setCurState(1);
+ window.history.replaceState(null, '', window.location.pathname);
 
 
       }
