--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -145,7 +145,7 @@ getToken(code);
 
         
       window.history.replaceState(null, '', window.location.pathname);
-     // setCurState(2);
+     setCurState(2);
 
       
 }
