--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -131,7 +131,7 @@ if (urlParams.get('error')) {
 
         console.log("an error was returned");
       } else if (urlParams.get('code')) {
-         setCurState(1);
+         //setCurState(1);
         console.log("looks like curStaet is 1!!!")
 
 
