--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -149,9 +149,9 @@ async function runGetToken(code) {
   await getToken(code);
       console.log("just ran gettoken on code");
 
-        
-      window.history.replaceState(null, '', window.location.pathname);
-     setCurState(2);
+        console.log("Here is where eventually i will replace href and then setcurstate =2")
+      //window.history.replaceState(null, '', window.location.pathname);
+    // setCurState(2);
 }
 
   
