--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -150,8 +150,8 @@ async function runGetToken(code) {
       console.log("just ran gettoken on code");
 
         console.log("Here is where eventually i will replace href and then setcurstate =2")
-      //window.history.replaceState(null, '', window.location.pathname);
-    // setCurState(2);
+      window.history.replaceState(null, '', window.location.pathname);
+     setCurState(2);
 }
 
   
