--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -146,6 +146,7 @@ runGetToken(code);
 }
 
 async function runGetToken(code) {
+  console.log("hi");
   await getToken(code);
       console.log("just ran gettoken on code");
 
