--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -141,7 +141,7 @@ console.log(code);
 console.log("that was the code");
 console.log("about to run gettoken")      
 
-runGetToken();
+runGetToken(code);
       
 }
 
