--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -152,9 +152,8 @@ async function runGetToken(code) {
 
         console.log("Here is where eventually i will replace href and then setcurstate =2")
       window.history.replaceState(null, '', window.location.pathname);
-     setTimeout(function(){
       setCurState(2);
-    },1000);
+      window.location.reload();
 }
 
   
