--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -153,7 +153,7 @@ async function runGetToken(code) {
         console.log("Here is where eventually i will replace href and then setcurstate =2")
       window.history.replaceState(null, '', window.location.pathname);
       setCurState(2);
-      window.location.reload();
+      //window.location.reload();
 }
 
   
