--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -22,7 +22,8 @@
 <script type="text/babel" src="react_step1.js"></script>
 <script type="text/babel" src="react_step2.js"></script>
 <script type="text/babel" src="react_step2point1.js"></script>
-<script type="text/babel" src="react_step2point2.js"></script> -->
+<script type="text/babel" src="react_step2point2.js"></script>
+<script type="text/babel" src="react_song.js"></script>
 
 
 
