--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -129,10 +129,10 @@ const authUrl = new URL("https://accounts.spotify.com/authorize")
   const [loaded, setLoaded] = useState(false);
 
 
-useEffect(() => {
-  if (!loaded && curState == 7 || curState == 6) {
+useEffect(() => { // to implement: get trackslist from local storage and set not to 2 but to 9 (i think?)
+  if (!loaded && curState == 7 || curState == 6) { // If we just loaded the page and the curstate is one of these
 
-    setCurState(8);
+    setCurState(2);
 
   
 }
