--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -138,8 +138,9 @@ useEffect(() => {
   console.log("are conditions right for me to setcurstate to 2?")
   console.log (!loaded && ( curState == 7 || curState == 6))
   if (!loaded && ( curState == 7 || curState == 6)) { // If we just loaded the page and the curstate is one of these
-
+    console.log("this is me setting cur state to 2")
     setCurState(2);
+    console.log("it is now curstate " + curState);
 
   
 }
