--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -141,9 +141,14 @@ useEffect(() => {
   console.log (!loaded && ( curState == 7 || curState == 6) )
   if (!loaded && ( curState == 7 || curState == 6)) { // If we just loaded the page and the curstate is one of these
     console.log("this is me setting cur state to 2")
-    //setCurState(2);
+    setCurState(2);
     console.log("it is now curstate " + curState);
+    if (localStorage.getItem("access_token")) {
     localStorage.setItem("curState",2)
+    } else {
+      localStorage.setItem("curState",1)
+
+    }
     window.location.reload();
 
 }
