--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -182,7 +182,7 @@ async function runGetToken(code) {
       console.log("just ran gettoken onthe  code and now accesstoken is " + localStorage.getItem("access_token") + " mm and what is curstate" + curState);
 
         console.log("Here is where eventually i will replace href and then setcurstate =2")
-      window.history.replaceState(null, '', window.location.pathname);
+      //window.history.replaceState(null, '', window.location.pathname);
       setCurState(2);
       //window.location.reload();
 }
