--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -96,6 +96,7 @@ const authUrl = new URL("https://accounts.spotify.com/authorize")
 
 
   const App = () => {
+    console.log("const App within react_main.html ")
 
     const { useEffect, useState, useRef } = React;
     const postIntroRef = useRef(null);
