--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -136,16 +136,11 @@ const authUrl = new URL("https://accounts.spotify.com/authorize")
 
 
 useEffect(() => {
-  console.log("ami loaded?")
-  console.log(loaded); // to implement: get trackslist from local storage and set not to 2 but to 9 (i think?)
-  console.log ("and my curstate is")
-  console.log(curState);
   
-  console.log("are conditions right for me to setcurstate to 2?")
-  console.log (!loaded && ( curState == 7 || curState == 6) )
   if (!loaded && ( curState == 7 || curState == 6)) { // If we just loaded the page and the curstate is one of these
     console.log("it is now curstate " + curState);
     if (localStorage.getItem("access_token") !== undefined && localStorage.getItem("access_token") !== null) {
+      // include a check here that the access_token isn't expired?
     localStorage.setItem("curState",3)
     } else {
       localStorage.setItem("curState",0)
