--- a/facemusic/scrollingplaylisttest.html
+++ b/facemusic/scrollingplaylisttest.html
@@ -1,16 +1,14 @@
 <style>
     .marquee {
-    /* width: 450px; */
-	/* line-height: 50px; */
-	background-color: silver;
-	/* color: white; */
+
     white-space: nowrap;
     overflow: hidden;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
+
 }
-.marquee p {
+.songrec {
     display: inline-block;
-    padding-left: 100%;
+    padding-left: 10%;
     animation: marquee 15s linear infinite;
 }
 @keyframes marquee {
@@ -20,5 +18,11 @@
 </style>
 
 <div class="marquee">
-	<p>Test</p>
+	<div class="songrec" height="500px;"><p>Test</p></div>
+    <div class="songrec"><p>Test</p></div>
+    <div class="songrec"><p>Test</p></div>
+    <div class="songrec"><p>Test</p></div>
+    <div class="songrec"><p>Test</p></div>
+    <div class="songrec"><p>Test</p></div>
+    <div class="songrec"><p>Test</p></div>
 </div>
