--- a/facemusic/scrollingplaylisttest.html
+++ b/facemusic/scrollingplaylisttest.html
@@ -1,5 +1,5 @@
 <style>
-    .marquee {
+    #marquee {
 
     white-space: nowrap;
     overflow: hidden;
@@ -17,7 +17,7 @@
 }
 </style>
 
-<div class="marquee">
+<div id="marquee">
 	<div class="songrec" height="500px;"><p>Test</p></div>
     <div class="songrec"><p>Test</p></div>
     <div class="songrec"><p>Test</p></div>
