--- a/facemusic/scrollingplaylisttest.html
+++ b/facemusic/scrollingplaylisttest.html
@@ -1,3 +1,6 @@
+
+
+
 <style>
     #marquee {
 
@@ -26,3 +29,14 @@
     <div class="songrec"><p>Test</p></div>
     <div class="songrec"><p>Test</p></div>
 </div>
+
+
+<script>
+window.onscroll=function(){
+   console.log( 
+     'top: '  + (window.pageYOffset || document.documentElement.scrollTop) + ' ' +
+     'left: ' + (window.pageXOffset || document.documentElement.scrollLeft)
+   );
+}
+
+</script>
