--- a/facemusic/react_main.html
+++ b/facemusic/react_main.html
@@ -135,7 +135,7 @@ const myBody = document.getElementsByTagName("body")[0]
     myBody.addEventListener('scroll', function() {
 
       
-      if (document.getElementById("intro").getBoundingClientRect().bottom  > document.documentElement.clientHeight) {
+      if (document.getElementById("intro").getBoundingClientRect().bottom >= document.documentElement.clientHeight) {
         document.getElementById("intro").style.overflow = "scroll";
       } else {
         document.getElementById("intro").style.overflow = "hidden";
