--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -97,7 +97,7 @@ useEffect(() => { // Set loaded to true, but first check localstorage to see if 
     if (localStorage.getItem("access_token") !== undefined && localStorage.getItem("access_token") !== null) {
     
     if (localStorage.getItem("curTime") + localStorage.getItem("expiresIn") > Math.floor(Date.now()/60)) {
-        refreshToken();
+        getRefreshToken();
         window.location.reload();
     }
     
