--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -94,7 +94,9 @@ useEffect(() => { // Set loaded to true, but first check localstorage to see if 
 // FUTURE DEVELOPMENT: make it pull up the exact stage you were just at if you refresh/leave the page on accident
   if (!loaded && ( curState == 7 || curState == 6 || curState == 8 || curState == 9)) { // If we just loaded the page and the curstate is one of these
     if (localStorage.getItem("access_token") !== undefined && localStorage.getItem("access_token") !== null) {
-    
+    console.log("localstorage curtime: " + localStorage.getItem("curTime"))
+    console.log("localstorage expires: " + localStorage.getItem("expiresIn"))
+    console.log("now / 1000 " + Date.now()/1000)
     if (localStorage.getItem("curTime") + localStorage.getItem("expiresIn") > Math.floor(Date.now()/1000)) {
         getRefreshToken();
        // window.location.reload();
