--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -98,6 +98,7 @@ useEffect(() => { // Set loaded to true, but first check localstorage to see if 
     console.log("localstorage expires: " + localStorage.getItem("expiresIn"))
     console.log("now / 1000 " + Date.now()/1000)
     if (localStorage.getItem("curTime") + localStorage.getItem("expiresIn") > Math.floor(Date.now()/1000)) {
+        localStorage.clear();
         localStorage.setItem("curState",0)
         
         //runGetRefreshToken();
