--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -92,6 +92,12 @@ useEffect(() => { // Set loaded to true, but first check localstorage to see if 
   
 
 // FUTURE DEVELOPMENT: make it pull up the exact stage you were just at if you refresh/leave the page on accident
+// This decision tree could be more clear / logical / efficient
+  if (!loaded && curState == 3 && (localStorage.getItem("access_token") == undefined || localStorage.getItem("access_token") == null)) {
+    setCurState(0);
+    
+  }
+  
   if (!loaded && ( curState == 7 || curState == 6 || curState == 8 || curState == 9)) { // If we just loaded the page and the curstate is one of these
     if (localStorage.getItem("access_token") !== undefined && localStorage.getItem("access_token") !== null) {
     console.log("localstorage curtime: " + localStorage.getItem("curTime"))
