--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -37,7 +37,7 @@
 const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
 if (isMobile) {
   window.alert("This app does not work on mobile devices.");
-
+  window.location.reload();
 }
 
 
