--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -104,7 +104,9 @@ useEffect(() => { // Set loaded to true, but first check localstorage to see if 
 // This decision tree could be more clear / logical / efficient
 console.log("laoded")
 console.log(loaded);
+console.log(localStorage.getItem("access_token"));
 console.log("undefiend?")
+
 console.log(localStorage.getItem("access_token") === undefined || localStorage.getItem("access_token") === null)
   if (!loaded && curState == 3 && (localStorage.getItem("access_token") === undefined || localStorage.getItem("access_token") === null)) {
     console.log("setting curstate to 0")
