--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -25,7 +25,7 @@
 <script type="text/babel" src="react_song.js"></script>
 
 <!-- FUNCTIONAL/HELPER SCRIPTS -->
- <script src="face-api.min.js"></script> 
+ <script src="models/face-api.min.js"></script> 
  <script src="react_spotify_auth.js"></script>
 
 
