--- a/facemusic/index.html
+++ b/facemusic/index.html
@@ -84,7 +84,7 @@
       if (!loaded && curState >= 3 && ( localStorage.getItem("access_token") === "undefined" || localStorage.getItem("access_token") === null
                                       || parseInt(localStorage.getItem("curTime")) + parseInt(localStorage.getItem("expiresIn")) > Math.floor(Date.now()/1000) ) ) { // Access_token doesn't exist, or is expired, yet curState is one that requires an access_token. Reset the whole app.
        console.log("hi");
-        localStorage.setItem
+        localStorage.setItem("access_token",null);
         setCurState(0);
                 setLoaded(true);
 
